--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>React Starter</title>
 </head>
-
+  <style>
+    body {
+      margin: 0px;
+    }
+  </style>
 <body>
   <div id="root"></div>
   <noscript>
